[ACCUEIL] Adapte l’affichage en mode bureau

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@ layout: accueil
                 <img
                         src="/assets/images/debuter-cyber.png"
                         alt="Illustration débutant cyber"
+                        class="illustration"
                 />
                 <h2>Votre organisation débute en cyber ?</h2>
                 <p>
@@ -55,27 +56,33 @@ layout: accueil
 <section class="votre-espace-cyber">
     <div class="contenu-section">
         <h1>Accédez à votre espace MesServicesCyber</h1>
-        <img src="assets/images/emplacement-image.svg"/>
-        <div class="fonctions-msc">
-            <div class="fonction-msc couleur1">
-                <h2>Gérez votre profil ANSSI</h2>
-                <p>Dites-le nous une fois pour utiliser bientôt tous les services numériques de l'ANSSI en commençant
-                    par vous authentifier via ProConnect.</p>
-            </div>
-            <div class="fonction-msc couleur2">
-                <h2>Comparez-vous avec d’autres entités</h2>
-                <p>Comparez votre organisation à d'autres similiaire à la vôtre pour identifier vos atouts et vos axes
-                    d'amélioration.</p>
-            </div>
-            <div class="fonction-msc couleur1">
-                <h2>Accédez à vos services et ressources</h2>
-                <p>Accédez à une liste de services et ressources personnalisés à partager au sein de votre organisation
-                    pour progression en cybersécurité.</p>
-            </div>
-            <div class="fonction-msc couleur2">
-                <h2>Trouvez les contacts pour vous accompagner</h2>
-                <p>Retrouvez une liste de contacts et partenaires de votre région pour répondre à toutes vos questions
-                    sur la cyber. (Bientôt disponible)</p>
+        <div class="contenu-msc">
+            <img src="assets/images/emplacement-image.svg"/>
+            <div class="fonctions-msc">
+                <div class="fonction-msc couleur1">
+                    <h2>Gérez votre profil ANSSI</h2>
+                    <p>Dites-le nous une fois pour utiliser bientôt tous les services numériques de l'ANSSI en
+                        commençant
+                        par vous authentifier via ProConnect.</p>
+                </div>
+                <div class="fonction-msc couleur2">
+                    <h2>Comparez-vous avec d’autres entités</h2>
+                    <p>Comparez votre organisation à d'autres similiaire à la vôtre pour identifier vos atouts et vos
+                        axes
+                        d'amélioration.</p>
+                </div>
+                <div class="fonction-msc couleur1">
+                    <h2>Accédez à vos services et ressources</h2>
+                    <p>Accédez à une liste de services et ressources personnalisés à partager au sein de votre
+                        organisation
+                        pour progression en cybersécurité.</p>
+                </div>
+                <div class="fonction-msc couleur2">
+                    <h2>Trouvez les contacts pour vous accompagner</h2>
+                    <p>Retrouvez une liste de contacts et partenaires de votre région pour répondre à toutes vos
+                        questions
+                        sur la cyber. (Bientôt disponible)</p>
+                </div>
             </div>
         </div>
         <a href="#" class="bouton primaire">Connectez-vous sur MesServicesCyber</a>
