Empêche le retour à la ligne avant un point d’interrogation

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ layout: accueil
                         alt="Illustration débutant cyber"
                         class="illustration"
                 />
-                <h2>Votre organisation débute en cyber ?</h2>
+                <h2>Votre organisation débute en cyber&nbsp;?</h2>
                 <p>
                     Découvrez les services et les ressources adaptés à chaque étape de votre parcours cyber.
                 </p>
