ajout des cartes et modif wording home

--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@ layout: accueil
                         alt="Illustration débutant cyber"
                         class="illustration"
                 />
-                <h2>Votre organisation débute en cyber&nbsp;?</h2>
+                <h2>Cybersécurité : se lancer ! </h2>
                 <p>
-                    Découvrez les services et les ressources adaptés à chaque étape de votre parcours cyber.
+                    Découvrez les services et les ressources pour aider votre organisation à se lancer dans une démarche de renforcement de la cybersécurité.
                 </p>
                 <a href="/parcours-debuter" class="bouton primaire">Débutez en cybersécurité</a>
             </div>
