modif wording home

--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@ layout: accueil
             <div class="fonctions-msc">
                 <div class="fonction-msc couleur1">
                     <h2>Gérez votre profil ANSSI</h2>
-                    <p>Dites-le nous une fois pour utiliser bientôt tous les services numériques de l'ANSSI en
+                    <p>Dites-le nous une fois pour utiliser tous les services numériques de l'ANSSI en
                         commençant
-                        par vous authentifier via ProConnect.</p>
+                        par vous authentifier via ProConnect (À venir).</p>
                 </div>
                 <div class="fonction-msc couleur2">
                     <h2>Comparez-vous avec d’autres entités</h2>
@@ -81,7 +81,7 @@ layout: accueil
                     <h2>Trouvez les contacts pour vous accompagner</h2>
                     <p>Retrouvez une liste de contacts et partenaires de votre région pour répondre à toutes vos
                         questions
-                        sur la cyber. (Bientôt disponible)</p>
+                        sur la cyber. (À venir)</p>
                 </div>
             </div>
         </div>
