--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ layout: accueil
                     <h2>Accédez à vos services et ressources</h2>
                     <p>Accédez à une liste de services et ressources personnalisés à partager au sein de votre
                         organisation
-                        pour progression en cybersécurité.</p>
+                        pour progresser en cybersécurité.</p>
                 </div>
                 <div class="fonction-msc couleur2">
                     <h2>Trouvez les contacts pour vous accompagner</h2>
