[CORRECTION] Remplace les href="#" par href="#a"
… car la compilation Svelte est en erreur lorsqu'on utilise "#".

--- a/parcours-approfondir.html
+++ b/parcours-approfondir.html
@@ -2,11 +2,12 @@
 layout: parcours
 permalink: /parcours-approfondir/
 ---
+
 <section class="titres-page">
-    <div class="contenu-section">
-        <h1>MesServicesCyber</h1>
-        <h2>Innovation ANSSI</h2>
-    </div>
+  <div class="contenu-section">
+    <h1>MesServicesCyber</h1>
+    <h2>Innovation ANSSI</h2>
+  </div>
 </section>
 
 <section class="chapeau fond-sombre">
@@ -14,7 +15,7 @@ permalink: /parcours-approfondir/
         <div class="fil-ariane">
             <a href="/">Accueil</a>
             <span><img src="/assets/images/icone-chevron-droite.svg"/> </span>
-            <a href="#">Progresser en cybersécurité</a>
+            <a href="#a">Progresser en cybersécurité</a>
             <span><img src="/assets/images/icone-chevron-droite.svg"/> </span>
             <span>Cybersécurité&nbsp;: approfondir&nbsp;!</span>
         </div>
