--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ layout: accueil
         </div>
       </div>
     </div>
-    <a href="#" class="bouton primaire">Connectez-vous sur MesServicesCyber</a>
+    <a href="#a" class="bouton primaire">Connectez-vous sur MesServicesCyber</a>
   </div>
 </section>
 
