Rends le bouton CTA sur l’accueil cliquable

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ layout: accueil
 
     <div id="extrait"></div>
 
-    <a class="bouton primaire">Découvrez plus de services</a>
+    <a href="/catalogue" class="bouton primaire">Découvrez plus de services</a>
   </div>
 </section>
 
