Corrige le lien vers le test

--- a/parcours-approfondir.html
+++ b/parcours-approfondir.html
@@ -26,7 +26,7 @@ permalink: /parcours-approfondir/
         </p>
         <div class="cta">
             <p>Trouvez le parcours cyber adapté à votre organisation</p>
-            <a href="/test" class="bouton primaire">Testez votre maturité</a>
+            <a href="/test-maturite" class="bouton primaire">Testez votre maturité</a>
         </div>
     </div>
 </section>
