--- a/parcours-debuter.html
+++ b/parcours-debuter.html
@@ -25,7 +25,7 @@ permalink: /parcours-debuter/
         </p>
         <div class="cta">
             <p>Trouvez le parcours cyber adapté à votre organisation</p>
-            <a href="/test" class="bouton primaire">Testez votre maturité</a>
+            <a href="/test-maturite" class="bouton primaire">Testez votre maturité</a>
         </div>
     </div>
 </section>
