--- a/parcours-debuter.html
+++ b/parcours-debuter.html
@@ -1,6 +1,7 @@
 ---
 layout: parcours
 permalink: /parcours-debuter/
+titreHtml: "Cybersécurité : se lancer ! | MesServicesCyber"
 ---
 
 <section class="titres-page">
