--- a/test-maturite.html
+++ b/test-maturite.html
@@ -1,6 +1,7 @@
 ---
 layout: test-maturite
 permalink: /test-maturite/
+titreHtml: "Test de maturité cyber | MesServicesCyber"
 ---
 <script
   type="module"
