Supprime les liens du fil d'Ariane
… car il n'existe pas de page dédiée à « Progresser en cybersécurité »

--- a/parcours-approfondir.html
+++ b/parcours-approfondir.html
@@ -9,7 +9,7 @@ titreHtml: "Cybersécurité : approfondir ! | MesServicesCyber"
         <div class="fil-ariane">
             <a href="/">Accueil</a>
             <span><img src="/assets/images/icone-chevron-droite.svg"/> </span>
-            <a href="#a">Progresser en cybersécurité</a>
+            <span>Progresser en cybersécurité</span>
             <span><img src="/assets/images/icone-chevron-droite.svg"/> </span>
             <span>Cybersécurité&nbsp;: approfondir&nbsp;!</span>
         </div>
