--- a/parcours-debuter.html
+++ b/parcours-debuter.html
@@ -9,7 +9,7 @@ titreHtml: "Cybersécurité : se lancer ! | MesServicesCyber"
     <div class="fil-ariane">
       <a href="/">Accueil</a>
       <span><img src="/assets/images/icone-chevron-droite.svg" /> </span>
-      <a href="#a">Progresser en cybersécurité</a>
+      <span>Progresser en cybersécurité</span>
       <span><img src="/assets/images/icone-chevron-droite.svg" /> </span>
       <span>Cybersécurité&nbsp;: se lancer&nbsp;!</span>
     </div>
