--- a/index.html
+++ b/index.html
@@ -67,8 +67,7 @@ titreHtml: "Accueil | MesServicesCyber"
           <h2>Gérez votre profil ANSSI</h2>
           <p>
             Dites-le nous une fois pour utiliser tous les services numériques de
-            l'ANSSI en commençant par vous authentifier via ProConnect (À
-            venir).
+            l'ANSSI en commençant par vous authentifier via ProConnect. (À venir)
           </p>
         </div>
         <div class="fonction-msc couleur2">
