[PARCOURS] Remplace le lien vers le test par un lien vers NIS2 dans le Hero

--- a/parcours-approfondir.html
+++ b/parcours-approfondir.html
@@ -5,37 +5,37 @@ titreHtml: "Cybersécurité : approfondir ! | MesServicesCyber"
 ---
 
 <section class="chapeau fond-sombre">
-    <div class="contenu-section">
-        <div class="fil-ariane">
-            <a href="/">Accueil</a>
-            <span><img src="/assets/images/icone-chevron-droite.svg"/> </span>
-            <span>Progresser en cybersécurité</span>
-            <span><img src="/assets/images/icone-chevron-droite.svg"/> </span>
-            <span>Cybersécurité&nbsp;: approfondir&nbsp;!</span>
-        </div>
-        <h1>Cybersécurité&nbsp;: approfondir&nbsp;!</h1>
-        <p>
-            Votre organisation a déjà mis en oeuvre des premières actions pour renforcer sa cybersécurité et souhaite
-            approfondir la démarche engagée ? Découvrez des services et ressources sélectionnés par l’ANSSI pour vous
-            aider.
-        </p>
-        <div class="cta">
-            <p>Trouvez le parcours cyber adapté à votre organisation</p>
-            <a href="/test-maturite" class="bouton primaire">Testez votre maturité</a>
-        </div>
+  <div class="contenu-section">
+    <div class="fil-ariane">
+      <a href="/">Accueil</a>
+      <span><img src="/assets/images/icone-chevron-droite.svg"/> </span>
+      <span>Progresser en cybersécurité</span>
+      <span><img src="/assets/images/icone-chevron-droite.svg"/> </span>
+      <span>Cybersécurité&nbsp;: approfondir&nbsp;!</span>
     </div>
+    <h1>Cybersécurité&nbsp;: approfondir&nbsp;!</h1>
+    <p>
+      Votre organisation a déjà mis en œuvre des premières actions pour renforcer sa cybersécurité et souhaite
+      approfondir la démarche engagée ? Découvrez des services et ressources sélectionnés par l’ANSSI pour vous
+      aider.
+    </p>
+    <div class="cta">
+      <p>Votre entité est régulée NIS2 ?</p>
+      <a href="/nis2" class="bouton primaire">Découvrir les services adaptés</a>
+    </div>
+  </div>
 </section>
 
 <section class="sommaire">
-    <div class="contenu-section">
-        <div class="groupe-boutons">
-            <a href="#sensibiliser" class="actif bouton secondaire">Sensibiliser</a>
-            <a href="#progresser" class="bouton secondaire">Progresser</a>
-            <a href="#piloter" class="bouton secondaire">Piloter</a>
-            <a href="#tester" class="bouton secondaire">Tester</a>
-            <a href="#anticiper" class="bouton secondaire">Anticiper</a>
-        </div>
+  <div class="contenu-section">
+    <div class="groupe-boutons">
+      <a href="#sensibiliser" class="actif bouton secondaire">Sensibiliser</a>
+      <a href="#progresser" class="bouton secondaire">Progresser</a>
+      <a href="#piloter" class="bouton secondaire">Piloter</a>
+      <a href="#tester" class="bouton secondaire">Tester</a>
+      <a href="#anticiper" class="bouton secondaire">Anticiper</a>
     </div>
+  </div>
 </section>
 
 {% include action-parcours.html
