--- a/parcours-debuter.html
+++ b/parcours-debuter.html
@@ -21,8 +21,8 @@ titreHtml: "Cybersécurité : se lancer ! | MesServicesCyber"
       aider.
     </p>
     <div class="cta">
-      <p>Trouvez le parcours cyber adapté à votre organisation</p>
-      <a href="/test-maturite" class="bouton primaire">Testez votre maturité</a>
+      <p>Votre entité est régulée NIS2 ?</p>
+      <a href="/nis2" class="bouton primaire">Découvrir les services adaptés</a>
     </div>
   </div>
 </section>
