[PARCOURS] Remplace le bloc vers le test par un bloc vers NIS2

--- a/parcours-approfondir.html
+++ b/parcours-approfondir.html
@@ -75,4 +75,4 @@ explication='Préparez-vous à un incident ou une crise d’origine cyber afin d
 parcours='APPROFONDIR_ANTICIPER'
 %}
 
-{% include encart-test-maturite.html fond='sombre' %}
+{% include encart-nis2.html fond='sombre' %}
