--- a/parcours-debuter.html
+++ b/parcours-debuter.html
@@ -60,4 +60,4 @@ explication='Faites-vous accompagner par un prestataire de proximité.'
 parcours='DEBUTER_ETRE_ACCOMPAGNE'
 %}
 
-{% include encart-test-maturite.html fond='sombre' %}
+{% include encart-nis2.html fond='sombre' %}
