--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@ titreHtml: "Accueil | MesServicesCyber"
 ---
 
 <script
-  type="module"
-  crossorigin
-  src="/lib-svelte/dist/assets/extrait.js"
+        type="module"
+        crossorigin
+        src="/lib-svelte/dist/assets/extrait.js"
 ></script>
 
 <section class="chapeau fond-sombre">
@@ -17,10 +17,10 @@ titreHtml: "Accueil | MesServicesCyber"
       partenaires.
     </p>
     <div class="boutons">
-      <a href="/test-maturite" class="bouton primaire"
-        >Tester votre maturité cyber</a
+      <a href="/nis2/" class="bouton primaire"
+      >Découvrir les services adaptés à NIS2</a
       >
-      <a href="/catalogue/" class="bouton secondaire">Découvrir nos services</a>
+      <a href="/catalogue/" class="bouton secondaire">Découvrir le catalogue complet</a>
     </div>
   </div>
 </section>
@@ -35,25 +35,18 @@ titreHtml: "Accueil | MesServicesCyber"
   </div>
 </section>
 
-<section class="encart fond-sombre">
+<section class="nis2">
   <div class="contenu-section">
-    <div class="liste-parcours">
-      <div class="carte parcours">
-        <img
-          src="/assets/images/debuter-cyber.png"
-          alt="Illustration débutant cyber"
-          class="illustration"
-        />
-        <h2>Cybersécurité : se lancer !</h2>
-        <p>
-          Découvrez les services et les ressources pour aider votre organisation
-          à se lancer dans une démarche de renforcement de la cybersécurité.
-        </p>
-        <a href="/parcours-debuter" class="bouton primaire"
-          >Débutez en cybersécurité</a
-        >
-      </div>
-    </div>
+    <img
+            class="illustration"
+            src="assets/images/directive-nis2.svg"
+            alt="NIS2"
+    />
+    <h1>Votre entité est régulée NIS2 ?</h1>
+    <p>
+      Découvrez tous les services accessibles aux entités regulées NIS2
+    </p>
+    <a href="/nis2/" class="bouton secondaire"> Découvrir </a>
   </div>
 </section>
 
@@ -61,7 +54,7 @@ titreHtml: "Accueil | MesServicesCyber"
   <div class="contenu-section">
     <h1>Accédez à votre espace MesServicesCyber</h1>
     <div class="contenu-msc">
-      <img src="assets/images/espace-msc.svg" />
+      <img src="assets/images/espace-msc.svg"/>
       <div class="fonctions-msc">
         <div class="fonction-msc couleur1">
           <h2>Gérez votre profil ANSSI</h2>
@@ -98,33 +91,32 @@ titreHtml: "Accueil | MesServicesCyber"
   </div>
 </section>
 
-<section class="nis2">
+<section class="encart fond-sombre">
   <div class="contenu-section">
-    <img
-      class="illustration"
-      src="assets/images/directive-nis2.svg"
-      alt="NIS2"
-    />
-    <h1>La Directive NIS2 est là&nbsp;!</h1>
-    <p>
-      Connaissez-vous cette Directive ? Savez-vous si votre entité sera régulée
-      ? Pour en savoir plus et faire le test pour vérifier si votre entité sera
-      soumise à cette directive, allez sur MonEspaceNIS2.
-    </p>
-    <a
-      href="https://monespacenis2.cyber.gouv.fr/"
-      target="_blank"
-      class="bouton secondaire"
-    >
-      En savoir plus
-    </a>
+    <div class="liste-parcours">
+      <div class="carte parcours">
+        <img
+                src="/assets/images/debuter-cyber.png"
+                alt="Illustration débutant cyber"
+                class="illustration"
+        />
+        <h2>Les services pour se lancer</h2>
+        <p>
+          Découvrez les services et les ressources pour aider votre organisation
+          à se lancer dans une démarche de renforcement de la cybersécurité.
+        </p>
+        <a href="/parcours-debuter" class="bouton primaire"
+        >Débutez en cybersécurité</a
+        >
+      </div>
+    </div>
   </div>
 </section>
 
 <section class="anssi">
   <div class="contenu-section">
     <h1>Qu’est-ce que l’ANSSI&nbsp;?</h1>
-    <img src="assets/images/logo-anssi.svg" class="logo" alt="ANSSI" />
+    <img src="assets/images/logo-anssi.svg" class="logo" alt="ANSSI"/>
     <p>
       Créée en 2009, l’Agence nationale de la sécurité des systèmes
       d’information (ANSSI) est l’autorité nationale en matière de cybersécurité
@@ -136,9 +128,9 @@ titreHtml: "Accueil | MesServicesCyber"
       accompagner.
     </p>
     <a
-      href="https://monespacenis2.cyber.gouv.fr/"
-      target="_blank"
-      class="bouton secondaire"
+            href="https://monespacenis2.cyber.gouv.fr/"
+            target="_blank"
+            class="bouton secondaire"
     >
       En savoir plus
     </a>
