--- a/index.html
+++ b/index.html
@@ -60,13 +60,13 @@ titreHtml: "Accueil | MesServicesCyber"
           <h2>Gérez votre profil ANSSI</h2>
           <p>
             Dites-le nous une fois pour utiliser tous les services numériques de
-            l'ANSSI en commençant par vous authentifier via ProConnect. (À venir)
+            l’ANSSI en commençant par vous authentifier via ProConnect. (À venir)
           </p>
         </div>
         <div class="fonction-msc couleur2">
           <h2>Comparez-vous avec d’autres entités</h2>
           <p>
-            Comparez votre organisation à d'autres similiaire à la vôtre pour
+            Comparez votre organisation à d’autres similiaires à la vôtre pour
             identifier vos atouts et vos axes d'amélioration.
           </p>
         </div>
