[CATALOGUE] Reformule les liens vers les parcours

--- a/catalogue.html
+++ b/catalogue.html
@@ -44,7 +44,7 @@ titreHtml: "Les services et ressources cyber | MesServicesCyber"
           Découvrez les services et les ressources pour aider votre organisation à se lancer dans une démarche de
           renforcement de la cybersécurité.
         </p>
-        <a href="/parcours-debuter">Découvrir le parcours</a>
+        <a href="/parcours-debuter">Découvrir</a>
       </div>
       <div class="carte parcours">
         <img
@@ -56,7 +56,7 @@ titreHtml: "Les services et ressources cyber | MesServicesCyber"
           Découvrez les services et les ressources pour aider votre organisation à approfondir la démarche de
           renforcement de la cybersécurité.
         </p>
-        <a href="/parcours-approfondir">Découvrir le parcours</a>
+        <a href="/parcours-approfondir">Découvrir</a>
       </div>
     </div>
   </div>
