Mets à jour les fils d’ariane

--- a/catalogue.html
+++ b/catalogue.html
@@ -15,7 +15,7 @@ titreHtml: "Les services et ressources cyber | MesServicesCyber"
     <div class="fil-ariane">
       <a href="/">Accueil</a>
       <span><img src="/assets/images/icone-chevron-droite.svg"/> </span>
-      <span>Les services et ressources cyber</span>
+      <span>Explorer le catalogue</span>
     </div>
     <h1>Les services et ressources cyber</h1>
     <p>
