--- a/nis2.html
+++ b/nis2.html
@@ -9,9 +9,7 @@ titreHtml: "Votre entité est régulée NIS2 ? | MesServicesCyber"
     <div class="fil-ariane">
       <a href="/">Accueil</a>
       <span><img src="/assets/images/icone-chevron-droite.svg"/> </span>
-      <span>Progresser en cybersécurité</span>
-      <span><img src="/assets/images/icone-chevron-droite.svg"/> </span>
-      <span>Cybersécurité&nbsp;: se lancer&nbsp;!</span>
+      <span>Vous accompagner avec NIS2</span>
     </div>
     <h1>Votre entité est régulée NIS2&nbsp;?</h1>
     <p>
