--- a/parcours-approfondir.html
+++ b/parcours-approfondir.html
@@ -9,11 +9,11 @@ titreHtml: "Cybersécurité : approfondir ! | MesServicesCyber"
     <div class="fil-ariane">
       <a href="/">Accueil</a>
       <span><img src="/assets/images/icone-chevron-droite.svg"/> </span>
-      <span>Progresser en cybersécurité</span>
+      <span>Découvrir notre sélection</span>
       <span><img src="/assets/images/icone-chevron-droite.svg"/> </span>
-      <span>Cybersécurité&nbsp;: approfondir&nbsp;!</span>
+      <span>Les services pour approfondir</span>
     </div>
-    <h1>Cybersécurité&nbsp;: approfondir&nbsp;!</h1>
+    <h1>Les services pour approfondir</h1>
     <p>
       Votre organisation a déjà mis en œuvre des premières actions pour renforcer sa cybersécurité et souhaite
       approfondir la démarche engagée ? Découvrez des services et ressources sélectionnés par l’ANSSI pour vous
