--- a/parcours-debuter.html
+++ b/parcours-debuter.html
@@ -9,11 +9,11 @@ titreHtml: "Cybersécurité : se lancer ! | MesServicesCyber"
     <div class="fil-ariane">
       <a href="/">Accueil</a>
       <span><img src="/assets/images/icone-chevron-droite.svg" /> </span>
-      <span>Progresser en cybersécurité</span>
+      <span>Découvrir notre sélection</span>
       <span><img src="/assets/images/icone-chevron-droite.svg" /> </span>
-      <span>Cybersécurité&nbsp;: se lancer&nbsp;!</span>
+      <span>Les services pour se lancer</span>
     </div>
-    <h1>Cybersécurité&nbsp;: se lancer&nbsp;!</h1>
+    <h1>Les services pour se lancer</h1>
     <p>
       Votre organisation souhaite mettre en œuvre des premières actions
       concrètes pour commencer à renforcer son niveau de cybersécurité.
