[HOME] Change le fond du bloc NIS2 et le style du bouton

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ titreHtml: "Accueil | MesServicesCyber"
     <p>
       Découvrez tous les services accessibles aux entités regulées NIS2
     </p>
-    <a href="/nis2/" class="bouton secondaire"> Découvrir </a>
+    <a href="/nis2/" class="bouton primaire">Découvrez les services</a>
   </div>
 </section>
 
