Renseigne le texte d’entête de la page NIS2

--- a/nis2.html
+++ b/nis2.html
@@ -13,10 +13,8 @@ titreHtml: "Votre entité est régulée NIS2 ? | MesServicesCyber"
     </div>
     <h1>Votre entité est régulée NIS2&nbsp;?</h1>
     <p>
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur non efficitur felis. Quisque dictum semper
-      finibus. Etiam non venenatis ligula. Phasellus sit amet tristique arcu. Pellentesque habitant morbi tristique
-      senectus et netus et malesuada fames ac turpis egestas. Aenean id enim condimentum, euismod magna et, porttitor
-      arcu. Sed efficitur tortor mauris.
+      Votre organisation souhaite se mettre en conformité avec la directive NIS2. Découvrez des services et ressources
+      sélectionnés par l’ANSSI pour vous aider.
     </p>
   </div>
 </section>
