Mets à jour les textes de la page NIS2

--- a/nis2.html
+++ b/nis2.html
@@ -13,8 +13,9 @@ titreHtml: "Votre entité est régulée NIS2 ? | MesServicesCyber"
     </div>
     <h1>Votre entité est régulée NIS2&nbsp;?</h1>
     <p>
-      Votre organisation souhaite se mettre en conformité avec la directive NIS2. Découvrez des services et ressources
-      sélectionnés par l’ANSSI pour vous aider.
+      La directive NIS 2 vise à renforcer le niveau de cybersécurité des tissus économique et administratif des pays
+      membres de l'UE. Découvrez les services et ressources proposées par l’ANSSI pour accompagner les entités régulées
+      par la directive.
     </p>
   </div>
 </section>
@@ -33,14 +34,14 @@ titreHtml: "Votre entité est régulée NIS2 ? | MesServicesCyber"
 {% include action-parcours.html
 id='s-informer'
 titre='S’informer'
-explication='Lorem ipsum dolor sit amet, consectetur adipiscing elit.'
+explication='Découvrez la directive et vérifiez si votre entité est concernée, grâce à notre test.'
 parcours='NIS2_S_INFORMER'
 %}
 
 {% include action-parcours.html
 id='s-enregistrer'
 titre='S’enregistrer'
-explication='Lorem ipsum dolor sit amet, consectetur adipiscing elit.'
+explication='Procédez à l’enregistrement de votre entité auprès de l’ANSSI.'
 parcours='NIS2_S_ENREGISTRER'
 fondAlternatif=true
 %}
@@ -48,14 +49,14 @@ fondAlternatif=true
 {% include action-parcours.html
 id='reduire-risques'
 titre='Réduire les risques cyber'
-explication='Lorem ipsum dolor sit amet, consectetur adipiscing elit.'
+explication='Mettez en place des mesures de sécurité adaptées.'
 parcours='NIS2_REDUIRE_RISQUES'
 %}
 
 {% include action-parcours.html
 id='declarer-incident'
 titre='Déclarer un incident'
-explication='Lorem ipsum dolor sit amet, consectetur adipiscing elit.'
+explication='Signalez à l’ANSSI vos incidents de sécurité.'
 parcours='NIS2_DECLARER_INCIDENT'
 fondAlternatif=true
 %}
