Corrige une faute de grammaire

--- a/catalogue.html
+++ b/catalogue.html
@@ -19,7 +19,7 @@ titreHtml: "Les services et ressources cyber | MesServicesCyber"
     </div>
     <h1>Les services et ressources cyber</h1>
     <p>
-      Trouvez les services et les ressources adaptées à vos besoins.
+      Trouvez les services et les ressources adaptés à vos besoins.
     </p>
   </div>
 </section>
