Utilise la répartition pour l’accueil
...depuis un fichier de configuration YAML

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ titreHtml: "Accueil | MesServicesCyber"
 <section class="services-dispos">
   <div class="contenu-section">
     <h1>Des services adaptés à vos besoins cyber</h1>
-    {% include script-donnees-json.html %}
+    {% include script-donnees-json.html repartition=site.data.accueil %}
 
     <div id="extrait"></div>
 
