Utilise la répartition pour le catalogue
...depuis un fichier de configuration YAML

--- a/catalogue.html
+++ b/catalogue.html
@@ -24,7 +24,7 @@ titreHtml: "Les services et ressources cyber | MesServicesCyber"
   </div>
 </section>
 
-{% include script-donnees-json.html %}
+{% include script-donnees-json.html repartition=site.data.catalogue %}
 
 <div id="catalogue"></div>
 
